# nutrimatic-zh

./: .dockerignore  .env.example  .gitignore  COPYING  Cargo.toml  Dockerfile  README.md  compose.yaml  dev_setup.py  mise.toml
src/: chinese.rs  corpus.rs  index.rs  lib.rs  main.rs  query.rs  search.rs  web.rs
web_static/: app.js  index.html  style.css  usage.html
